TRUNK-3195: creating JUnit Test for validate behavior of HibernateFormDAO.getFormCriteria
    -Created JUnitTest in FormService for validate behavior of getFormCriteria() when containingAnyFormField parameter is populated.
    -Created new FormService dataset to use in the Unit Test. Dataset contains multiple forms.
    -fixing getFormCriteria() to consider form fields passed in the containingAnyFormField parameter when filtering.
    -fixing getFormCriteria() logic when dataset formService contains multiple forms and containingAllFormFields is populated.
    -Modifying unitTest getForms_shouldReturnFormsContainingAllFormFieldsInContainingAllFormFields(). Added logic to validate multiple forms in FormService dataset.